[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Levels/Map/Map.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Audio/songiguess.ogg" type="AudioStream" id=2]
[ext_resource path="res://Scenes/Levels/TestWorld/TestWorld.gd" type="Script" id=3]
[ext_resource path="res://Assets/Textures/pointer.png" type="Texture" id=4]
[ext_resource path="res://Assets/Textures/leaf.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Menus/MainMenu.tscn" type="PackedScene" id=6]

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 8, 8 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.0862745, 0.0862745, 0.0862745, 1 )

[sub_resource type="ViewportTexture" id=3]
viewport_path = NodePath("Viewport")

[node name="TestWorld" type="Spatial"]
script = ExtResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="."]
visible = false
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="PlayerSpawnPos" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 38, 2.36685, 57 )

[node name="PlayerHolder" type="Position3D" parent="."]

[node name="Map" parent="." instance=ExtResource( 1 )]

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 100, 200 )
handle_input_locally = false
hdr = false
usage = 3
render_target_v_flip = true
render_target_update_mode = 1
gui_disable_input = true

[node name="Camera" type="Camera" parent="Viewport"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 57, 0 )
projection = 1
size = 200.0

[node name="Minimap" type="Sprite" parent="."]
visible = false
position = Vector2( 10, 10 )
texture = SubResource( 3 )
centered = false

[node name="Player" type="Sprite" parent="Minimap"]
position = Vector2( 88, 157 )
rotation = -1.5708
texture = ExtResource( 4 )

[node name="Leaf" type="Sprite" parent="Minimap"]
position = Vector2( 38, 24 )
texture = ExtResource( 5 )

[node name="Camera" type="InterpolatedCamera" parent="."]
transform = Transform( 0.947473, -0.190407, 0.256983, 0, 0.803483, 0.595328, -0.319836, -0.564057, 0.761278, 30.5364, 28.8494, 79.1796 )
current = true
near = 0.01
far = 250.0
speed = 40.0
enabled = true
__meta__ = {
"_editor_description_": ""
}

[node name="MenuCam" type="Position3D" parent="."]
transform = Transform( 0.947473, -0.190407, 0.256983, 0, 0.803483, 0.595328, -0.319836, -0.564057, 0.761278, 30.5364, 28.8494, 79.1796 )
__meta__ = {
"_editor_description_": ""
}

[node name="MainMenu" parent="." instance=ExtResource( 6 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -12.0
autoplay = true
[connection signal="begin_game" from="MainMenu" to="." method="begin_game"]
